# RevilosLib

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/RevilosLib/: CLI.py  IDgenerator.py  __init__.py
src/RevilosLib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
