
[project]
name = "RevilosLib"
version = "0.0.1"

description = "Small usefull Python Lib"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://TO-BE-ADDED.com"
Issues = "https://TO-BE-ADDED.com"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

